--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,6 +52,10 @@ jobs:
             echo "coverage is $total, expected 100.0%"
             exit 1
           fi
+      - name: Provider contract gate
+        run: |
+          set -euo pipefail
+          go test ./internal/secretprovider/scaleway -run 'Test(Open_ProfileResolution|ScalewaySecretAPI_|ToScalewaySecretType)'
 
   goreleaser:
     runs-on: ubuntu-latest
